# py-client

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
src/trashdb/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py
